fix(api): nest query metadata inside data
